--- a/template/fetchflights.html
+++ b/template/fetchflights.html
@@ -91,7 +91,7 @@
               <button class="bottom-10 m-4 px-4 py-2
                 rounded-md text-white bg-red-600 hover:bg-red-700"
                 data-bs-target="#exampleModalCenter" data-bs-toggle="modal"
-                type="button">Book Now</button>
+                type="button">Book Now</button>                
             </div>
           </div>
         </div>
@@ -149,11 +149,8 @@
   </div>
   
     <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/index.min.js"></script>
-    <script>
-      $('#location_form').on('submit', function(event) {
-      // alert('dude you totally clicked');
-      // event.preventDefault();
-      });
-    </script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
