--- a/template/airline_model.html
+++ b/template/airline_model.html
@@ -1,34 +1,3 @@
-<!-- <div id="modal" class=" z-10 inset-0 overflow-y-auto hidden">
-        <div class="flex items-center justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
-            <div class="fixed inset-0 transition-opacity">
-                <div class="absolute inset-0 bg-gray-500 opacity-75"></div>
-            </div>
-
-            <div class="bg-white rounded-lg overflow-hidden shadow-xl transform transition-all sm:w-full sm:max-w-lg">
-                <form class="px-6 py-4">
-                    <div class="mb-4">
-                        <label class="block text-gray-700 font-bold mb-2" for="airline_username">
-                            Airline Username
-                        </label>
-                        <input class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="airline_username" type="text" placeholder="Enter your airline username">
-                    </div>
-                    <div class="mb-4">
-                        <label class="block text-gray-700 font-bold mb-2" for="password">
-                            Password
-                        </label>
-                        <input class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="password" type="password" placeholder="Enter your password">
-                    </div>
-                    <div class="flex items-center justify-between">
-                        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
-                            Submit
-                        </button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
- -->
-
  <div id="modal" class="fixed z-10 inset-0 overflow-y-auto hidden">
     <div class="flex items-center justify-center min-h-screen px-4">
         <div class="fixed inset-0 transition-opacity">
@@ -42,7 +11,8 @@
                     </svg>
                 </button>
             </div>
-            <form class="px-6 py-4" method="POST" action="/manageflight/">
+            <form class="px-6 py-4" method="POST" action="" id="airline_login">
+                {% csrf_token %}
                 <div class="mb-4">
                     <label class="block text-gray-700 font-bold mb-2" for="airline_username">
                         Airline ID
@@ -56,7 +26,7 @@
                     <input class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="airline_password" type="password" placeholder="Enter your password">
                 </div>
                 <div class="flex items-center justify-between">
-                    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
+                    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" id="airline_submit" type="button">
                         Submit
                     </button>
                 </div>
