--- a/template/fetchflights.html
+++ b/template/fetchflights.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,56 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flightoh</title>
     <link href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-
-    <!-- modals  -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/index.min.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+        <!-- modals  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
-  <body>
-    <!-- navbar -->
-    <nav class="bg-red-800 text-white text-xl flex items-center justify-between px-4 py-3">
-      <div class="flex items-center">
-        <img class="w-16 h-16 mr-4" src="/Source code/Travellogo(1).png" alt="Logo">
-        <h1 class="font-medium">Company Name</h1>
-      </div>
-      <div class="flex items-center">
-        <a class="text-white hover:text-gray-500 mr-4" href="#">Hotel</a>
-        <div class="relative">
-          <a class="text-white hover:text-gray-500 mr-4" href="#">For Airline</a>
-          <div class="absolute hidden rounded-md bg-white">
-            <a class="block px-8 py-2 text-md text-gray-700 hover:bg-gray-100" href="#">Add Flight</a>
-            <a class="block px-8 py-2 text-md text-gray-700 hover:bg-gray-100" href="#">Delete Flight</a>
-            <a class="block px-8 py-2 text-md text-gray-700 hover:bg-gray-100" href="#">Update Flight</a>
-          </div>
-        </div>
-        <a class="text-white hover:text-gray-500 mr-4" href="#">Customer Support</a>
-        <img class="rounded-full w-14" src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp" alt="Avatar">
-      </div>
-    </nav>
-
-    <!-- review fight -->
-    <div class="flex justify-evenly text-center h-30 w-full bg-gray-300">
-      <div class="flex-col p-4">
-        <img class="w-16 h-12 mb-4" src="/flight_booking/media/media/download_1.png" alt="Airline Logo">
-        <h3 class="text-lg font-medium mb-2">Airline Name</h3>
-      </div>
-      <div class="flex justify-between items-center gap-x-10">
-        <p>Depart Airport</p>
-        <p class="text-xl font-medium">Time Duration</p>
-        <p>Arrive Airport</p>
-      </div>
-    </div>
-
-    <div class="w-8/12 mt-2 max-h-96 mx-auto border-4 border-red-500 overflow-scroll overflow-x-hidden">
+  <body class="bg-red-300">
+    {% include 'navbar.html' %}
+   <!-- <fecth flight> -->
+    <div class="w-8/12 shadow-2xl  mx-auto border-4 border-t-0 outline-none border-indigo-700">
       <div class="flex-col justify-center">
         {% for i in Flights %}
         <form id="{{i.Temparal_ID}}" action="/fetchflights/{{i.Temparal_ID}}/" method="post">
           {% csrf_token %}
-          <div class="relative border-2 border-black min-w-60 h-36 shadow-md bg-gradient-to-r from-indigo-700 to-indigo-600">
-            <div class="flex items-center p-4">
+          <div class="relative  border-b-4  border-b-indigo-600 min-w-60 h-40  z-10 bg-cyan-500">
+            <div class="flex  justify-center p-4">
               <img class="w-28 h-28 rounded-full" src="/media/{{i.Airline_logo}}" alt="{{ Airline_name }} logo">
               <div class="m-4 gap-y-2">
                 <h2 class="text-white text-lg font-medium">
@@ -73,29 +38,27 @@
                     Departure: {{ i.Depart_time }} to {{ i.Arrive_time }}
                   </div>
                 </div>
-                <button class="bottom-10 m-4 px-4 py-2 rounded-md text-white bg-red-600 hover:bg-red-700" data-bs-target="#exampleModalCenter" data-bs-toggle="modal" type="button">
+                <button  class="m-4 px-4 py-2 rounded-md text-white bg-red-600 hover:bg-red-700" data-bs-toggle="modal" data-bs-target="#exampleModal" type="button">
                   Book Now
                 </button>
               </div>
             </div>
           </div>
-
           <!-- modal-contact -->
-          <div id="exampleModalCenter" class="modal fade fixed top-0 left-0 hidden w-full h-full outline-none overflow-x-hidden overflow-y-auto" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-modal="true" tabindex="-1">
-            <div class="modal-dialog modal-dialog-centered relative w-auto pointer-events-none">
-              <div class="modal-content border-none shadow-lg relative flex flex-col w-full pointer-events-auto bg-white bg-clip-padding rounded-md outline-none text-current">
-                <div class="modal-header flex flex-shrink-0 items-center justify-between p-4 border-b border-gray-200 rounded-t-md">
-                  <h5 id="exampleModalScrollableLabel" class="text-xl font-medium text-gray-800">
-                    Enter Number of Passenger
-                  </h5>
-                  <button class="btn-close box-content w-4 h-4 p-1 text-black border-none rounded-none opacity-50 focus:shadow-none focus:outline-none focus:opacity-100 hover:text-black hover:opacity-75 hover:no-underline" data-bs-dismiss="modal" type="button" aria-label="Close"></button>
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered ">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">Enter Number of Passenger</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body relative p-4">
-                  <h1 class="mb-2">Total remaining seat: {{i.Total_ticket}}</h1>
+                <div class="modal-body p-4">
+                  <h1 class="mb-2">Total remaining seat: {{i.Total_ticket}} </h1>
                   <input id="Ticket" class="Ticket border-2 focus:border-black w-full focus:outline-none p-2" name="Ticket" type="number" placeholder="Enter passenger number" onfocus="this.classList.add('border-black')" onblur="this.classList.remove('border-black')">
                 </div>
-                <div class="modal-footer flex flex-shrink-0 flex-wrap items-center justify-end p-4 border-t border-gray-200 rounded-b-md">
-                  <button class="inline-block px-6 py-2.5 bg-purple-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-purple-700 hover:shadow-lg focus:bg-purple-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-purple-800 active:shadow-lg transition duration-150 ease-in-out" data-bs-dismiss="modal" type="button">
+                <div class="modal-footer">
+                  <button class="inline-block px-6 py-2.5 bg-purple-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-purple-700 hover:shadow-lg focus:bg-purple-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-purple-800 active:shadow-lg transition duration-150 ease-in-out" 
+                  data-bs-dismiss="modal" type="button">
                     Close
                   </button>
                   <button id="Next" class="Next inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out ml-1" type="submit">
@@ -109,10 +72,34 @@
         {% endfor %}
       </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script>
+        // const ticket_text = JSON.parse(document.getElementById('ticket_text').textContent)
+        // console.log(ticket_text);
+           // nav bar feature 
+         // Toggle dropdown menu for flights button
+      function toggleDropdown() {
+        document.getElementById("dropdown").classList.toggle("hidden");
+      }
+      
+      // Toggle dropdown menu for avatar
+      function toggleAvatarDropdown() {
+        document.getElementById("avatar-dropdown").classList.toggle("hidden");
+      }
+      // submit manage airline
+        const form = document.querySelector('#airline_login');
+        const submitBtn = document.querySelector('#airline_submit');
 
-    <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/index.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        submitBtn.addEventListener('click', (event) => {
+        event.preventDefault(); 
+        const input_airline_id = document.getElementById("airline_id").value;
+        const input_airline_password = document.getElementById("airline_password");
+        const action = `/manageflight/${input_airline_id}/`;
+        form.action = action;
+        form.submit(); // submit the form with the new action
+    });
+    </script>
   </body>
 </html>
