--- a/template/home.html
+++ b/template/home.html
@@ -24,43 +24,8 @@
       background-image: url("/media/media/home_background3.jpg");
     }
     </style>
-
 <body>
-  <nav class="sticky top-0 z-50 flex items-center justify-start gap-x-5 px-6 py-1 bg-blue-500">
-      <!-- Logo and website name -->
-      <div class="flex items-center flex-grow">
-        <img src={% static '/Travellogo(1).png' %}  alt="flightOH logo" class="h-16 w-16 mr-4">
-        <h1 class="text-white font-bold  my-auto">flightOH</h1>
-      </div>
-      <!-- Customer support component -->
-      <a href="#" class=" px-4 py-2 border-b-4 hover:no-underline border-transparent  hover:border-white text-white hover:text-white">Customer Support</a>
-
-      <!-- Button with toggle dropdown menu -->
-      <div class="relative">
-        <button class="px-4 py-2 border-b-4 border-transparent hover:border-white text-white hover:text-white focus:outline-none" onclick="toggleDropdown()">
-          For Airlines
-        </button>
-        <div id="dropdown" class="absolute right-0 mt-2 py-2 w-40 bg-white rounded-lg shadow-xl hidden">
-          <a href="#modal" class="block px-4 py-2 text-gray-800 hover:bg-blue-500 hover:text-white" >Add Flight</a>
-          <a href="#modal" class="block px-4 py-2 text-gray-800 hover:bg-blue-500 hover:text-white" >Update Flight</a>
-          {% include 'airline_model.html' %}
-          <button class="block w-full text-left px-4 py-2 text-gray-800 hover:bg-blue-500 hover:text-white focus:outline-none" onclick="toggleDropdown()">Close</button>
-        </div>
-      </div>
-      <!-- Avatar with toggle dropdown menu -->
-      <div class="relative">
-        <button class="flex items-center focus:outline-none" onclick="toggleAvatarDropdown()">
-          <img src={% static 'avatar.jpg' %} alt="Person" class="h-16 w-16 rounded-full mr-2">
-          <span class="text-white font-medium">John Doe</span>
-        </button>
-        <div id="avatar-dropdown" class="absolute right-0 mt-2 w-48 bg-white rounded-lg shadow-xl hidden">
-          <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-blue-500 hover:text-white">Profile</a>
-          <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-blue-500 hover:text-white">Settings</a>
-          <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-blue-500 hover:text-white">Booking history</a>
-          <button class="block w-full text-left px-4 py-2 text-gray-800 hover:bg-blue-500 hover:text-white focus:outline-none" onclick="toggleAvatarDropdown()">Close</button>
-        </div>
-      </div>
-    </nav>
+   {% include 'navbar.html' %}
   <div id="carousel" class="w-full  bg-center bg-cover flex items-center justify-center">
     <div class="flex justify-center items-center">
       <form class="px-2 py-7" id="form" action="/fetchflights/" method="POST">
@@ -102,8 +67,18 @@
         document.getElementById("avatar-dropdown").classList.toggle("hidden");
       }
       // submit manage airline
-        const input_airline_id = document.getElementById("airline_id");
+        const form = document.querySelector('#airline_login');
+        const submitBtn = document.querySelector('#airline_submit');
+
+        submitBtn.addEventListener('click', (event) => {
+        event.preventDefault(); 
+        const input_airline_id = document.getElementById("airline_id").value;
         const input_airline_password = document.getElementById("airline_password");
+        const action = `/manageflight/${input_airline_id}/`;
+        form.action = action;
+        form.submit(); // submit the form with the new action
+    });
+
         // client side form validation
         const input_depart = document.getElementById("depart");
         const input_arrive = document.getElementById("arrive");
