--- a/template/passanger_register.html
+++ b/template/passanger_register.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,63 +7,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.2/bootstrap3-typeahead.min.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
   </head>
-  <body class="bg-blue-400">
-
+  <body class="bg-blue-400 ">
+    <!-- <img src="../media/media/download_3.jpg" alt=""> -->
     <!-- // navbar  -->
-    <nav class="bg-red-800 text-white  text-xl flex items-center justify-between px-4 py-3">
-      <div class="flex items-center">
-        <img class="w-16 h-16 mr-4" src="/Source code/Travellogo(1).png" alt="Logo">
-        <h1 class="font-medium">Company Name</h1>
-      </div>
-      <div class="flex items-center">
-        <a class="text-white hover:text-gray-500 mr-4" href="#">Hotel</a>
-        <div class="relative">
-          <a class="text-white hover:text-gray-500 mr-4" href="#">For Airline</a>
-          <div class="absolute hidden rounded-md bg-white">
-            <a class="block px-8 py-2 text-md text-gray-700 hover:bg-gray-100" href="#">Add Flight</a>
-            <a class="block px-8 py-2 text-md text-gray-700 hover:bg-gray-100" href="#">Delete Flight</a>
-            <a class="block px-8 py-2 text-md text-gray-700 hover:bg-gray-100" href="#">Update Flight</a>
-          </div>
-        </div>
-        <a class="text-white hover:text-gray-500 mr-4" href="#">Customer Support</a>
-        <img class="rounded-full w-14" src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp" alt="Avatar">
-      </div>
-    </nav>
-
+    {% include 'navbar.html' %}
     <!-- flight review page  -->
-
     <div class="flex justify-evenly text-center h-30 w-full bg-gray-300">
       <div class="flex-col p-4">
-        <img src="/flight_booking/media/media/download_1.png" alt="Airline Logo" class="w-16 h-12 mb-4">
-        <h3 class="text-lg font-medium mb-2">Airline Name</h3>
+        <img src="/media/{{flight_object.Airline_logo}}" alt="Airline Logo" class="w-24 h-24 mb-4">
+        <h3 class="text-lg font-medium font-extrabold mb-2">{{flight_object.Airline_name}}</h3>
       </div>
-        <div class="flex justify-between items-center gap-x-10">
-            <p>Depart Airport</p>
-            <p class="text-xl font-medium">Time Duration</p>
-            <p>Arrive Airport</p>
-        </div>
+      <div class="flex justify-between items-center gap-x-10">
+          <p>{{flight_object.Flightname1}}</p>
+          <p class="text-xl font-medium">{{flight_object.Timeduration}}</p>
+          <p>{{flight_object.Flightname2}}</p>
+      </div>
     </div>
  
     <div class=" w-full bg-gree">
-      <form action="/bookticket/{{Temparal_ID}}/" method="post">
+      <form action="/bookticket/{{flight_object.Temparal_ID}}/{{No_ticket}}" method="post">
         {% csrf_token %}
       <div class="flex flex-col items-center justify-center p-4">
-        <h1 class="text-xl font-bold">Add Passenger Details</h1>
+        <h1 class="text-2xl shadow-2xl font-bold">Add Passenger Details</h1>
         <div class="flex flex-col items-center justify-between w-full mt-4">
           <div class="flex flex-col">
-            <h2 class="text-md font-medium">Passenger 1:</h2>
+            {% for i in number_list %}
+            <h2 class="text-md font-medium">Passenger {{i}}:</h2>
             <div class="flex flex-row items-center justify-between w-full mt-2">
-              <input class=" border-2 focus:border-black focus:outline-none p-2" type="text" placeholder="Name" onfocus="this.classList.add('border-black')" onblur="this.classList.remove('border-black')">
-              <input class=" border-2 focus:border-black focus:outline-none p-2 ml-2" type="text" placeholder="DOB" onfocus="this.classList.add('border-black')" onblur="this.classList.remove('border-black')">
-              <input class=" border-2 focus:border-black focus:outline-none p-2 ml-2" type="text" placeholder="Gender" onfocus="this.classList.add('border-black')" onblur="this.classList.remove('border-black')">
+              <input name="p_{{i}}_name" class=" border-2 focus:border-black focus:outline-none p-2" type="text" placeholder="Name" onfocus="this.classList.add('border-black')" onblur="this.classList.remove('border-black')">
+              <input name="p_{{i}}_dob" class=" border-2 focus:border-black focus:outline-none p-2 ml-2" type="text" placeholder="DOB" onfocus="this.classList.add('border-black')" onblur="this.classList.remove('border-black')">
+              <select id="" class="shadow-2xl  border-2 focus:border-black focus:outline-none p-2 ml-2" type="" placeholder="Gender" onfocus="this.classList.add('border-black')" onblur="this.classList.remove('border-black')"
+               name="p_{{i}}_gender">
+                <option>Choose Gender</option>
+                <option value="Male">Male</option>
+                <option value="Female">Female</option>
+              </select>              
             </div>
-            <h2 class="text-md font-medium">Passenger 2:</h2>
-            <div class="flex flex-row items-center justify-between w-full mt-2">
-              <input class=" border-2 focus:border-black focus:outline-none p-2" type="text" placeholder="Name" onfocus="this.classList.add('border-black')" onblur="this.classList.remove('border-black')">
-              <input class=" border-2 focus:border-black focus:outline-none p-2 ml-2" type="text" placeholder="DOB" onfocus="this.classList.add('border-black')" onblur="this.classList.remove('border-black')">
-              <input class=" border-2 focus:border-black focus:outline-none p-2 ml-2" type="text" placeholder="Gender" onfocus="this.classList.add('border-black')" onblur="this.classList.remove('border-black')">
-            </div>
+            {% endfor %}
           </div>
           <div class="flex flex-col">
             <h2 class="text-md font-medium">Contact Information:</h2>
@@ -74,7 +59,7 @@
         </div>
         <div class="flex flex-row items-center justify-center w-full mt-4">
           <button class="bg-red-500 hover:bg-red-700 text-white font-medium py-2 px-4 rounded-lg shadow-lg">Cancel</button>
-          <button class="bg-green-500 hover:bg-green-600 text-white p-2 rounded-lg ml-4 shadow-lg" type="submit">Submit</button>
+          <button class="bg-green-500 hover:bg-green-600 text-white py-2 px-4 rounded-lg ml-4 shadow-lg" type="submit">Submit</button>
         </div>
       </form>
     </div>
@@ -87,6 +72,28 @@
       dropdownButton.addEventListener("mouseout", function () {
         dropdownMenu.classList.add("hidden");
       });
+         // nav bar feature 
+         // Toggle dropdown menu for flights button
+         function toggleDropdown() {
+        document.getElementById("dropdown").classList.toggle("hidden");
+      }
+      
+      // Toggle dropdown menu for avatar
+      function toggleAvatarDropdown() {
+        document.getElementById("avatar-dropdown").classList.toggle("hidden");
+      }
+      // submit manage airline
+        const form = document.querySelector('#airline_login');
+        const submitBtn = document.querySelector('#airline_submit');
+
+        submitBtn.addEventListener('click', (event) => {
+        event.preventDefault(); 
+        const input_airline_id = document.getElementById("airline_id").value;
+        const input_airline_password = document.getElementById("airline_password");
+        const action = `/manageflight/${input_airline_id}/`;
+        form.action = action;
+        form.submit(); // submit the form with the new action
+    });
     </script>
   </body>
 </html>
