--- a/template/navbar.html
+++ b/template/navbar.html
@@ -1,16 +1,15 @@
 {% load static %}
-<nav class="sticky top-0 z-50 flex items-center justify-start gap-x-5 px-6 py-3 bg-indigo-600">
+<nav class="sticky top-0 z-50 flex items-center justify-start gap-x-2 px-6 py-3 bg-indigo-600">
     <!-- Logo and website name -->
     <div class="flex items-center flex-grow">
       <img src={% static '/Travellogo(1).png' %}  alt="flightOH logo" class="h-16 w-16 mr-4">
       <h1 class="text-white font-bold text-3xl  my-auto">flightOH</h1>
     </div>
     <!-- Customer support component -->
-    <a href="#" class=" px-4 py-2 border-b-4 hover:no-underline border-transparent text-2xl  hover:border-white text-white hover:text-white">Customer Support</a>
-
+    <a href="#" class=" px-2 py-2 border-b-4 hover:no-underline border-transparent text-2xl  hover:border-white text-white hover:text-white">Customer Support</a>
     <!-- Button with toggle dropdown menu -->
     <div class="relative">
-      <button class="px-4 py-2 border-b-4 text-xl border-transparent hover:border-white text-2xl  text-white hover:text-white focus:outline-none" onclick="toggleDropdown()">
+      <button class="px-2 py-2 border-b-4 text-xl border-transparent hover:border-white text-2xl  text-white hover:text-white focus:outline-none" onclick="toggleDropdown()">
         For Airlines
       </button>
       <div id="dropdown" class="absolute right-0 mt-2 py-2 w-40 bg-white rounded-lg shadow-xl hidden">
@@ -21,16 +20,25 @@
       </div>
     </div>
     <!-- Avatar with toggle dropdown menu -->
+    {% if user.is_authenticated %}
     <div class="relative">
       <button class="flex  flex-col items-center focus:outline-none" onclick="toggleAvatarDropdown()">
-        <img src={% static 'avatar.jpg' %} alt="Person" class="h-16 w-16 rounded-full mr-2">
-        <span class="text-white pt-2 text-xl font-bold">John Doe</span>
+        <img src="/media/{{profile_pic}}" alt="Person" class="h-16 w-16 rounded-full mr-2">
+        <span class="text-white pt-2 text-xl font-bold">{{user.username}}</span>
       </button>
       <div id="avatar-dropdown" class="absolute right-0 mt-2 w-48 bg-white rounded-lg shadow-xl hidden">
-        <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-blue-500 hover:text-white">Profile</a>
-        <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-blue-500 hover:text-white">Settings</a>
+        <a href="/auth/profile/" class="block px-4 py-2 text-gray-800 hover:bg-blue-500 hover:text-white">Profile</a>
+        <a href="/auth/logout/" class="block px-4 py-2 text-gray-800 hover:bg-blue-500 hover:text-white">Logout</a>
         <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-blue-500 hover:text-white">Booking history</a>
         <button class="block w-full text-left px-4 py-2 text-gray-800 hover:bg-blue-500 hover:text-white focus:outline-none" onclick="toggleAvatarDropdown()">Close</button>
       </div>
     </div>
+    {% else %}
+    <div class="px-6 py-3 mx-auto text-white font-bold text-3xl">
+		  <div class="flex items-center justify-between">
+			  <a class="border-b-4      py-2 hover:no-underline border-transparent text-2xl  hover:border-white text-white hover:text-white" href="/auth/register/">Register</a>
+			  <a class="ml-4 border-b-4 py-2  hover:no-underline border-transparent text-2xl  hover:border-white text-white hover:text-white" href="/auth/login/">Log In</a>
+		  </div>
+		</div>
+    {% endif %}
   </nav>
