--- a/template/airline_model.html
+++ b/template/airline_model.html
@@ -17,7 +17,7 @@
                     <label class="block text-gray-700 font-bold mb-2" for="airline_username">
                         Airline ID
                     </label>
-                    <input class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="airline_id" type="text" placeholder="Enter your airline_id">
+                    <input class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="airline_id" type="text" placeholder="Enter your airline_id" required>
                 </div>
                 <div class="mb-4">
                     <label class="block text-gray-700 font-bold mb-2" for="password">
