--- a/template/confirmation.html
+++ b/template/confirmation.html
@@ -10,17 +10,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.2/bootstrap3-typeahead.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
   </head>
-  <body class="bg-blue-400">
+  <body class="bg-gray-300">
 
     {% include 'navbar.html' %}
 
-    <div class="h-screen w-full bg-cover bg-40">
+    <div class="h-screen  w-full bg-cover bg-40 ">
         <div class="flex flex-col items-center">
-          <h1 class="text-5xl m-4">Congralations </h1>
-          <h3 class="text-2xl  m-4">Download Your Ticket for Journey</h1>
-            <p>/{{pdfname}}/</p>
-            <a href="/{{pdfname}}/" download>Download</a>
-            <a href="/">Back to Home</a>
+          <h1 class="text-5xl bg-green-400 px-4 py-4 rounded-sm font-serif shadow-2xl  m-4">Congralations </h1>
+          <h3 class="text-2xl text-black font-semibold m-4">Download Your Ticket for Journey</h1>
+            <p class="font-sans">/{{pdfname}}/</p>
+            <a href="{{pdfname}}" target="_blank" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 mb-3 rounded focus:outline-none focus:shadow-outline" download>Download</a>
+            <a href="/" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">Back to Home</a>
         </div>
       </div>
       <script>
@@ -34,18 +34,18 @@
       function toggleAvatarDropdown() {
         document.getElementById("avatar-dropdown").classList.toggle("hidden");
       }
-      // submit manage airline
-        const form = document.querySelector('#airline_login');
-        const submitBtn = document.querySelector('#airline_submit');
+    //   // submit manage airline
+    //     const form = document.querySelector('#airline_login');
+    //     const submitBtn = document.querySelector('#airline_submit');
 
-        submitBtn.addEventListener('click', (event) => {
-        event.preventDefault(); 
-        const input_airline_id = document.getElementById("airline_id").value;
-        const input_airline_password = document.getElementById("airline_password");
-        const action = `/manageflight/${input_airline_id}/`;
-        form.action = action;
-        form.submit(); // submit the form with the new action
-    });
+    //     submitBtn.addEventListener('click', (event) => {
+    //     event.preventDefault(); 
+    //     const input_airline_id = document.getElementById("airline_id").value;
+    //     const input_airline_password = document.getElementById("airline_password");
+    //     const action = `/manageflight/${input_airline_id}/`;
+    //     form.action = action;
+    //     form.submit(); // submit the form with the new action
+    // });
       </script>
   </body>
 </html>
