--- a/template/passanger_register.html
+++ b/template/passanger_register.html
@@ -17,7 +17,7 @@
     {% include 'min_nav.html' %}
     <!-- flight review page  -->
     <div class="flex justify-evenly text-center h-28  w-full bg-gray-300">
-      <div class="flex items-center gap-x-2 py-2">
+      <div class="flex items-center py-4">
         <img src="/media/{{flight_object.Airline_logo}}" alt="Airline Logo" class="w-20 h-20 ">
         <h3 class="text-lg font-medium font-extrabold mb-2">{{flight_object.Airline_name}}</h3>
       </div>
@@ -27,43 +27,79 @@
           <p>{{flight_object.Flightname2}}</p>
       </div>
     </div>
- 
-    <div class=" w-full bg-gree">
-      <form action="/bookticket/{{flight_object.Temparal_ID}}/{{No_ticket}}" method="post">
+  
+    {{ Wallet_balance|json_script:'Wallet_balance' }}
+    {{ Total_price |json_script:'total_price' }}
+
+    <div class="w-full bg-gree">
+      <form action="/bookticket/{{flight_object.Temparal_ID}}/{{No_ticket}}" id="final_form" method="post">
         {% csrf_token %}
-      <div class="flex flex-col items-center justify-center p-4">
-        <h1 class="text-2xl bg-indigo-600 p-3 shadow-2xl font-bold">Add Passenger Details</h1>
+      <div class="flex flex-col items-center gap-y-4 justify-center pt-4">
+        <h1 class="text-3xl bg-indigo-600 p-3 font-serif text-white shadow-2xl font-bold">Add Passenger Details</h1>
         <div class="flex flex-col items-center justify-between w-full mt-4">
           <div class="flex flex-col">
             {% for i in number_list %}
-            <h2 class="text-md font-medium">Passenger {{i}}:</h2>
-            <div class="flex flex-row items-center justify-between w-full mt-2">
-              <input name="p_{{i}}_name" class=" border-2 focus:border-black focus:outline-none p-2" type="text" placeholder="Name" onfocus="this.classList.add('border-black')" onblur="this.classList.remove('border-black')">
-              <input name="p_{{i}}_dob" class=" border-2 focus:border-black focus:outline-none p-2 ml-2" type="date" placeholder="DOB" onfocus="this.classList.add('border-black')" onblur="this.classList.remove('border-black')">
-              <select id="" class="shadow-2xl  border-2 focus:border-black focus:outline-none p-2 ml-2" type="" placeholder="Gender" onfocus="this.classList.add('border-black')" onblur="this.classList.remove('border-black')"
+            <h2 class="text-md font-semibold my-2">Passenger {{i}}:</h2>
+            <div class="flex flex-row items-center gap-x-10 justify-between w-full ">
+              <input name="p_{{i}}_name" required class="min-w-56 border-2 focus:border-black focus:outline-none p-2"      type="text" placeholder="Name" onfocus="this.classList.add('border-black')" onblur="this.classList.remove('border-black')">
+              <input name="p_{{i}}_dob" required class=" border-2 focus:border-black focus:outline-none p-2 ml-2"  type="date" placeholder="DOB" onfocus="this.classList.add('border-black')" onblur="this.classList.remove('border-black')">
+              <select id=""  required class="shadow-2xl   border-2 focus:border-black focus:outline-none p-2 ml-2" type="" placeholder="Gender" onfocus="this.classList.add('border-black')" onblur="this.classList.remove('border-black')"
                name="p_{{i}}_gender">
-                <option>Choose Gender</option>
+                <option disabled>Choose Gender</option>
                 <option value="Male">Male</option>
                 <option value="Female">Female</option>
               </select>              
             </div>
             {% endfor %}
           </div>
-          <div class="flex flex-col">
-            <h2 class="text-md font-medium">Contact Information:</h2>
-            <div class="flex flex-row items-center justify-between w-full mt-2">
-              <input class="border-2 focus:border-black focus:outline-none p-2" type="text" placeholder="Phone Number" onfocus="this.classList.add('border-black')" onblur="this.classList.remove('border-black')">
-              <input class="border-2 focus:border-black focus:outline-none p-2 ml-2" type="email" placeholder="Email Address" onfocus="this.classList.add('border-black')" onblur="this.classList.remove('border-black')">
+          <div class="flex flex-col mt-4">
+            <h2 class="text-md text-center font-bold font-medium">Contact Information:</h2>
+            <div class="flex flex-row items-center gap-x-10 justify-between w-full mt-2">
+              <input class="border-2 focus:border-black focus:outline-none w-64 p-2" type="text" placeholder="Phone Number"        required onfocus="this.classList.add('border-black')" onblur="this.classList.remove('border-black')">
+              <input class="border-2 focus:border-black focus:outline-none w-64 p-2 ml-2" type="email" placeholder="Email Address" required onfocus="this.classList.add('border-black')" onblur="this.classList.remove('border-black')">
+            </div>
+          </div>
+          <div class="flex justify-center items-center mt-4">
+            <div class="bg-white p-8 rounded-lg shadow-2xl flex flex-col items-center">
+              <h1 class="text-2xl  text-center font-bold ">Your wallet Balance: {{Wallet_balance}}</h1>
+              <p class="text-xl  text-center font-bold ">Total Price : {{No_ticket}} * {{flight_price}} = {{Total_price}}  </p>
+              <p class="text-xl  text-center font-bold ">Total passenger : {{No_ticket}} </p>
             </div>
           </div>
         </div>
-        <div class="flex flex-row items-center justify-center w-full mt-4">
-          <button class="bg-red-500 hover:bg-red-700 text-white font-medium py-2 px-4 rounded-lg shadow-lg">Cancel</button>
-          <button class="bg-green-500 hover:bg-green-600 text-white py-2 px-4 rounded-lg ml-4 shadow-lg" type="submit">Submit</button>
+        <div class="flex flex-row items-center justify-center mb-8 gap-x-4 w-full mt-4">
+          <a href="/"class="bg-red-500 hover:bg-red-700 text-white font-medium py-2 px-4 rounded-lg shadow-lg">Back to Home</a>
+          <button id="pay_btn"class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded">
+            Pay Now
+          </button>
         </div>
       </form>
+
     </div>
+
     <script>
+
+          // handle payment errors
+
+    const final_form = document.getElementById("final_form");
+    const pay_btn = document.getElementById("pay_btn");
+    const Total_price = document.getElementById("total_price").textContent
+    const Wallet_balance = JSON.parse(document.getElementById('Wallet_balance').textContent);
+    console.log(Wallet_balance);
+    console.log(Total_price);
+    pay_btn.addEventListener("click",(e)=>{
+      console.log("click");
+      e.preventDefault();
+      if(Wallet_balance>=Total_price){
+        console.log("yes");
+        final_form.submit()
+      }
+      else{
+        console.log("yes");
+        alert("You have not enough money in your wallet refill Your wallet")
+      }
+    });
+    
       let dropdownMenu = document.querySelector(".absolute");
       let dropdownButton = document.querySelector(".relative");
       dropdownButton.addEventListener("mouseover", function () {
@@ -82,18 +118,6 @@
       function toggleAvatarDropdown() {
         document.getElementById("avatar-dropdown").classList.toggle("hidden");
       }
-      // submit manage airline
-        const form = document.querySelector('#airline_login');
-        const submitBtn = document.querySelector('#airline_submit');
-
-        submitBtn.addEventListener('click', (event) => {
-        event.preventDefault(); 
-        const input_airline_id = document.getElementById("airline_id").value;
-        const input_airline_password = document.getElementById("airline_password");
-        const action = `/manageflight/${input_airline_id}/`;
-        form.action = action;
-        form.submit(); // submit the form with the new action
-    });
     </script>
   </body>
 </html>
