--- a/template/successflight.html
+++ b/template/successflight.html
@@ -12,14 +12,15 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <p>Congralations flight is addes in system</p>
-    <p>Your flight Id is {{flight.Flight_id}}</p>
-    <button onclick="redirectTo('{{window.location.host}}/manageflight/{{flight.Airline_id}}')" class="flex items-center justify-center outline-none rounded-md px-4 py-2 bg-blue-500 hover:bg-blue-700 text-white font-medium rounded-md transition-all duration-1000 ease-in-out hover:border-2 border-transparent hover:border-black shadow-xl">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
-          <path fill-rule="evenodd" d="M10 18a8 8 0 1 1 0-16 8 8 0 0 1 0 16zm0-2a6 6 0 1 0 0-12 6 6 0 0 0 0 12zM9 9V6a1 1 0 1 1 2 0v3h3a1 1 0 1 1 0 2h-3v3a1 1 0 1 1-2 0v-3H6a1 1 0 1 1 0-2h3z" clip-rule="evenodd" />
-        </svg>
-        Manage Flight
+  <div class="flex gap justify-center items-center h-screen">
+    <div>
+    <p>Congralations flight is added into system</p>
+      <p>Your flight Id is {{flight.Flight_id}}</p>
+      <button onclick="redirectTo('{{window.location.host}}/manageflight/{{flight.Airline_id}}')" class="flex items-center justify-center outline-none rounded-md px-4 py-2 bg-blue-500 hover:bg-blue-700 text-white font-medium rounded-md transition-all duration-1000 ease-in-out hover:border-2 border-transparent hover:border-black shadow-xl">
+        Back to Manage Flight
       </button>
+    </div>
+    </div>
 </body>
 <script>
     function redirectTo(url) {
