--- a/template/home.html
+++ b/template/home.html
@@ -26,8 +26,7 @@
     </style>
 <body>
   {% include 'navbar.html' %}
-  
-  {% include 'popularPlaces.html' %}
+
   <div id="carousel" class="w-full py-4  bg-center bg-cover flex items-center justify-center">
     <div class="flex justify-center items-center">
       <form class="px-2 py-7" id="form" action="/fetchflights/" method="POST">
@@ -57,8 +56,9 @@
       </form>
     </div>
   </div>
-  
+  {% include 'popularPlaces.html' %}
   {% include 'footer.html' %}
+  <script src="https://unpkg.com/@themesberg/flowbite@1.1.1/dist/flowbite.bundle.js"></script>
 
   <script>   
         // nav bar feature 
