--- a/template/register.html
+++ b/template/register.html
@@ -7,11 +7,10 @@
     <!-- Include Tailwind CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
   </head>
-  <body class="bg-gray-100">
-    <div class="container mx-auto py-10">
-      <div class="max-w-2xl mx-auto bg-white rounded-lg overflow-hidden md:max-w-xl">
-        <div class="md:flex">
-          <div class="w-full px-6 py-8 md:w-1/2">
+  <body class="bg-blend-color">
+    <div class="flex w-full min-h-screen justify-center items-center">
+      
+          <div class="bg-gray-100 border-2 border-gray-300  rounded-3xl shadow-2xl w-full px-6 py-8 md:w-1/2">
             <h2 class="text-2xl font-bold text-gray-700 mb-2">
               Create an account
             </h2>
@@ -57,8 +56,7 @@
               </div>
             </form>
           </div>
-        </div>
-      </div>
+     
     </div>
   </body>
 </html>
